clusters/k3s-cluster/excalidraw/excalidraw.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: excalidraw
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidraw
  namespace: excalidraw
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: excalidraw
  template:
    metadata:
      labels:
        app: excalidraw
    spec:
      # Note: Excalidraw uses nginx which requires root privileges
      containers:
        - name: excalidraw
          image: excalidraw/excalidraw:sha-4bfc5bb
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  namespace: excalidraw
spec:
  selector:
    app: excalidraw
  ports:
    - port: 5000
      targetPort: 80
      name: excalidraw

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw
  namespace: excalidraw
  labels:
    name: excalidraw
spec:
  rules:
    - host: excalidraw.jacobbanghart.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: excalidraw
                port:
                  number: 5000
